fix(css): reduce header left-margin on mobile screens

--- a/src/styles/markdown/_md.css
+++ b/src/styles/markdown/_md.css
@@ -17,6 +17,7 @@
 .md h5 {
   margin-top     : 3rem;
   margin-left    : 3rem;
+  margin-bottom  : 0.3rem;
   color          : var(--md-head-c);
   font-variant   : small-caps;
   font-weight    : 300;
